Update Walmart_store sales forecasting.ipynb

--- a/Walmart_store sales forecasting.ipynb
+++ b/Walmart_store sales forecasting.ipynb
@@ -3279,7 +3279,7 @@
         "    model.add(Dense(9, init='normal', activation='relu'))\n",
         "    model.add(Dense(5, init='normal', activation='relu'))\n",
         "    model.add(Dense(1, init='normal'))\n",
-        "    model.compile(loss='mean_absolute_error', optimizer='adam',metrics=['mean_absolute_error'])\n",
+        "    model.compile(loss='mean_absolute_error', optimizer='adam')\n",
         "    return model"
       ],
       "execution_count": 0,
